@@ -70,8 +70,9 @@ public class NumberPlayList {
 
         //Method 9: process the stream, apply operation on stream and store the result
         List<Double> StreamList = myNumberList.stream()
+
                                   .map(toDoubleFunction)
-                                  .toList();
+                                  .collect(Collectors.toList());
         System.out.println("Mth9: Printing Double List : "+ StreamList);
     }
 }
